<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/explorerFlowName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:hint="@string/flowNameString"
        android:inputType="textCapSentences|textAutoCorrect"
        android:maxLines="1"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/explorerExploreFlow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/explorerExploreFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        style="@style/quImageButton"
        android:scaleY="-1"
        app:layout_constraintBottom_toBottomOf="@id/explorerFlowName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/explorerFlowName"
        app:srcCompat="@android:drawable/ic_menu_more" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/explorerRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/explorerBottomLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explorerFlowName"
        app:stackFromEnd="true" />


    <LinearLayout
        android:id="@+id/explorerBottomLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/explorerBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/backString" />


        <Button
            android:id="@+id/explorerNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/newString" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>