<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:visibility="visible">

    <EditText
        android:id="@+id/focusFlowName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:hint="@string/flowNameString"
        android:inputType="textCapSentences|textAutoCorrect"
        android:maxLines="1"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/focusExploreFlow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/focusExploreFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        style="@style/quImageButton"
        app:layout_constraintBottom_toBottomOf="@id/focusFlowName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/focusFlowName"
        app:srcCompat="@android:drawable/ic_menu_more" />

    <EditText
        android:id="@+id/focusEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="top|left"
        android:hint="@string/noteTextString"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        android:imeOptions="actionNone"
        app:layout_constraintBottom_toTopOf="@+id/focusBottomLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/focusInitialTime" />

    <LinearLayout
        android:id="@+id/focusUpperLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/focusFlowName">

        <ImageButton
            android:id="@+id/focusInitial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            style="@style/quImageButton"
            app:srcCompat="@android:drawable/ic_menu_recent_history" />

        <ImageButton
            android:id="@+id/focusSaved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            style="@style/quImageButton"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <ImageButton
            android:id="@+id/focusCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            style="@style/quImageButton"
            android:scaleX="-1"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <ImageButton
            android:id="@+id/focusNumberDown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            style="@style/quImageButton"
            android:rotation="90"
            app:srcCompat="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/focusNumberUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            style="@style/quImageButton"
            android:rotation="-90"
            app:srcCompat="@android:drawable/ic_media_play" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/focusBottomLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/focusBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/backString" />

        <Button
            android:id="@+id/focusSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saveString" />

        <Button
            android:id="@+id/focusNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/newString" />
    </LinearLayout>

    <TextView
        android:id="@+id/focusNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@id/focusUpperLinear"
        app:layout_constraintEnd_toStartOf="@id/focusUpperLinear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/focusUpperLinear" />

    <TextView
        android:id="@+id/focusInitialTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/focusUpperLinear" />
</androidx.constraintlayout.widget.ConstraintLayout>